syntax = "proto3";
package nevermore.grpc.ipc;
message Beep
{
    Payload Payload = 1;
}
message Payload
{
	string Client_Id = 1;
    int32 Delay = 2;
    string Content = 3;
}

service BeepService
{
    rpc BeepUnary(Beep) returns (Beep);

    rpc BeepStreamingFromClient(stream Beep) returns (Beep);
    rpc BeepStreamingFromServer(Beep) returns (stream Beep);

    rpc ResponseStreamingFromClient(stream Beep) returns (Beep);
    rpc RequestStreamingFromServer(Beep) returns (stream Beep);
}